# my_site

./: .env.example  Dockerfile
.github/workflows/: deploy.yml
ssg/: Cargo.toml
ssg/posts/: diary-2026-01-w1.md  happy-new-year-2026.md  my-first-post.md
ssg/src/: dynamo.rs  main.rs  markdown.rs  model.rs  render.rs
ssg/templates/: footer.html  google_analytics.html  header.html  index.html  post.html  post_component.html
ssg/templates/css/: components.css  style.css
